DRAKEN-2940: Add validation usage statistics.
